--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -51,6 +51,9 @@
   
       .coop-card {
         background-color: #fff;
+        background-image: url('../../assets/coop-face-view-removebg-preview.png');
+        background-size: cover;
+        background-position: center;
         border: 1px solid #eee;
         border-radius: 10px;
         padding: 1rem;
