--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,14 +1,17 @@
 <app-navbar></app-navbar>
+<div class="return-button-container">
+  <button class="return-button" (click)="goBack()">⬅ Retour</button>
+</div>
 <div class="auth-container">
   <div class="auth-box">
     <h2>Créer un compte</h2>
-  <form (ngSubmit)="onRegister()">
-    <input type="email" [(ngModel)]="email" name="email" placeholder="Email" required class="input-field" />
-    <input type="password" [(ngModel)]="password" name="password" placeholder="Mot de passe" required class="input-field" />
-    <button type="submit" class="btn btn-primary">S’inscrire</button>
-  </form>
-  <p *ngIf="error" class="error-message">{{ error }}</p>
-  <a routerLink="/auth/login" class="link">Déjà un compte ? Se connecter</a>
+    <form (ngSubmit)="onRegister()">
+      <input type="email" [(ngModel)]="email" name="email" placeholder="Email" required class="input-field" />
+      <input type="password" [(ngModel)]="password" name="password" placeholder="Mot de passe" required class="input-field" />
+      <button type="submit" class="btn btn-primary">S’inscrire</button>
+    </form>
+    <p *ngIf="error" class="error-message">{{ error }}</p>
+    <a routerLink="/auth/login" class="link">Déjà un compte ? Se connecter</a>
   </div>
 </div>
 
