--- a/src/app/dashboard/acces-code-modal/acces-code-modal.component.html
+++ b/src/app/dashboard/acces-code-modal/acces-code-modal.component.html
@@ -1,10 +1,11 @@
-<div>
-    <button class="return-button" (click)="goBack()">⬅ Retour</button>
+<div class="container">
+  <div>
     <h2>Entrer le code d’accès</h2>
     <input [(ngModel)]="code" placeholder="Code d'accès" />
     <div class="buttons">
-        <button (click)="submit()">Valider</button>
-        <button class="cancel" (click)="cancel()">Annuler</button>
+      <button (click)="submit()">Valider</button>
+      <button class="cancel" (click)="cancel()">Annuler</button>
     </div>
+  </div>
 </div>
 
