--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <a routerLink="/" class="navbar-brand">Jurgutech</a>
+    <a routerLink="/" class="navbar-brand">Avi-Tech</a>
     <div class="navbar-links">
       <a routerLink="/auth/login" class="navbar-link">Se connecter</a>
       <a routerLink="/auth/register" class="navbar-link">Créer un compte</a>
