--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="home-container">
     <div class="overlay">
-        <h1>Bienvenue sur <span>Jurgutech 🐔</span></h1>
+        <h1>Bienvenue sur <span>Avi-Tech 🐔</span></h1>
         <p>Gérez vos poulaillers de manière intelligente, connectée et efficace.</p>
         <div class="btn-group">
             <a routerLink="/auth/login" class="btn">Se connecter</a>
